dropshot/tests/fail/bad_endpoint7.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> $DIR/bad_endpoint7.rs:26:23
   |
26 |       Ok(HttpResponseOk(Ret {
   |  _______________________^
27 | |         x: "Oxide".to_string(),
28 | |         y: 0x1de,
29 | |     }))
   | |_____^ the trait `serde::ser::Serialize` is not implemented for `Ret`
   |
   = note: required by `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:26:8
     |
26   |       Ok(HttpResponseOk(Ret {
     |  ________^
27   | |         x: "Oxide".to_string(),
28   | |         y: 0x1de,
29   | |     }))
     | |______^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:26:5
     |
26   | /     Ok(HttpResponseOk(Ret {
27   | |         x: "Oxide".to_string(),
28   | |         y: 0x1de,
29   | |     }))
     | |_______^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:25:45
     |
25   |   ) -> Result<HttpResponseOk<Ret>, HttpError> {
     |  _____________________________________________^
26   | |     Ok(HttpResponseOk(Ret {
27   | |         x: "Oxide".to_string(),
28   | |         y: 0x1de,
29   | |     }))
30   | | }
     | |_^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:19:1
     |
19   | / #[endpoint {
20   | |     method = GET,
21   | |     path = "/test",
22   | | }]
     | |__^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future {wrapped_bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> $DIR/bad_endpoint7.rs:19:1
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(RequestContext<()>) -> impl Future {wrapped_bad_endpoint}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |           FuncParams: Extractor + 'static,
   |                                   ------- required by this bound in `ApiEndpoint::<Context>::new`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
